force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RN-{yymmdd}-{000}</displayFormat>
        <label>Reservation No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>