force-app/main/default/objects/Reservation__c/fields/ConferenceRoom__c.field-meta.xml
<CustomField>
    <fullName>ConferenceRoom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference Room</label>
    <referenceTo>ConferenceRoom__c</referenceTo>
    <relationshipLabel>Reservation</relationshipLabel>
    <relationshipName>Reservation</relationshipName>
    <type>Lookup</type>
</CustomField>