force-app/main/default/objects/Reservation__c/fields/Interviewee__c.field-meta.xml
<CustomField>
    <fullName>Interviewee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewee</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Reservation</relationshipLabel>
    <relationshipName>IntervieweeReservation</relationshipName>
    <type>Lookup</type>
</CustomField>