force-app/main/default/objects/Reservation__c/fields/PrimaryInterviewer__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInterviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservation</relationshipLabel>
    <relationshipName>PrimaryInterviewerReservation</relationshipName>
    <type>Lookup</type>
</CustomField>