force-app/main/default/objects/Reservation__c/fields/SecondaryInterviewer__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInterviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservation (Secondary Interviewer)</relationshipLabel>
    <relationshipName>SecondaryInterviewerReservation</relationshipName>
    <type>Lookup</type>
</CustomField>